syntax = "proto3";

package sysapi.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/sysapi/v1;v1";

// The SysApi service definition.
service SysApi {

  // 分页查询SysApi
  rpc GetPageSysApi (SysApiPageReq) returns (SysApiPageReply)  {
    option (google.api.http) = {
      get: "/v1/sys/api/page"
    };
  }

  // 获取SysApi
  rpc GetSysApi (SysApiReq) returns (SysApiReply)  {
    option (google.api.http) = {
      get: "/v1/sys/api/{id}"
    };
  }

  // 更新SysApi
  rpc UpdateSysApi (SysApiUpdateReq) returns (SysApiUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sys/api/{id}"
      body: "*"
    };
  }

  // 创建SysApi
  rpc CreateSysApi (SysApiCreateReq) returns (SysApiCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sys/api"
      body: "*"
    };
  }

  // 删除SysApi
  rpc DeleteSysApi (SysApiDeleteReq) returns (SysApiDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/api/{id}"
    };
  }

  // 批量删除SysApi
  rpc BatchDeleteSysApi (SysApiBatchDeleteReq) returns (SysApiDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/api"
    };
  }

}

// 实体数据
message SysApiData {
    int64 id = 1;
    //处理器
    string handle = 2;
    //标题
    string title = 3;
    //地址
    string path = 4;
    //请求类型
    string action = 5;
    //接口类型
    string type = 6;
    //创建时间
    google.protobuf.Timestamp createdAt = 7;
    //更新时间
    google.protobuf.Timestamp updatedAt = 8;
    //创建者
    int64 createBy = 9;
    //更新者
    int64 updateBy = 10;
    //租户
    int64 tenantId = 11;

}

// 查询搜索请求
message SysApiPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysApiReq param = 2;
}

// 查询搜索返回
message SysApiPageReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 总条数
    int64 total = 3;
    // 查询数据
    repeated SysApiData items = 4;
}


// 查询搜索请求
message SysApiReq {
    int64 id = 1;
    //处理器
    string handle = 2;
    //标题
    string title = 3;
    //地址
    string path = 4;
    //请求类型
    string action = 5;
    //接口类型
    string type = 6;
    //创建时间
    google.protobuf.Timestamp createdAt = 7;
    //更新时间
    google.protobuf.Timestamp updatedAt = 8;
    //创建者
    int64 createBy = 9;
    //更新者
    int64 updateBy = 10;
    //租户
    int64 tenantId = 11;

}

// 查询返回
message SysApiReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    SysApiData result = 3;
}

// 创建SysApi请求
message SysApiCreateReq {
    //处理器
    string handle = 1;
    //标题
    string title = 2;
    //地址
    string path = 3;
    //请求类型
    string action = 4;
    //接口类型
    string type = 5;

}

// 创建SysApi返回
message SysApiCreateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    SysApiData result = 3;
}

// 更新SysApi请求
message SysApiUpdateReq {
    int64 id = 1;
    //处理器
    string handle = 2;
    //标题
    string title = 3;
    //地址
    string path = 4;
    //请求类型
    string action = 5;
    //接口类型
    string type = 6;

}


// 更新SysApi返回
message SysApiUpdateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    SysApiData result = 3;
}

// 删除SysApi请求
message SysApiDeleteReq {
    int64 id = 1;
}


// 批量删除SysApi请求
message SysApiBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysApi返回
message SysApiDeleteReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果
    bool result = 3;
}

